finalizing service_ping api

--- a/views/index.html
+++ b/views/index.html
@@ -32,25 +32,24 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 table-chart1">
+                <div class="col table-chart1">
                     <div class="table-chart-content">
                         <div class="tccheader">
                             <p>Market Share</p>
                         </div>
                         <div class="tcccontent">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem illum necessitatibus sint
+                            - insert chart here -
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 table-chart2">
+                <div class="w-100 d-block d-md-none"><br></div>
+                <div class="col table-chart2">
                     <div class="table-chart-content">
                         <div class="tccheader">
-                            <p>Market Share</p>
+                            <p>Statistics</p>
                         </div>
                         <div class="tcccontent">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla perspiciatis ea temporibus
-                            labore vel possimus totam itaque, harum cum dicta vitae illo obcaecati placeat, earum
-                            sapiente repellendus maiores quas. Corrupti.
+                            Not available
                         </div>
                     </div>
                 </div>
@@ -60,7 +59,7 @@
                     <table>
                         <thead>
                             <tr class="t-head">
-                                <th class="column1">MID</th>
+                                <th class="column1">BSID</th>
                                 <th class="column2">Type</th>
                                 <th class="column3">Version</th>
                                 <th class="column4">Uptime</th>
