render service list

--- a/views/index.html
+++ b/views/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="row" style="margin-top: 32px;">
                 <div class="col-md-12">
-                    <table>
+                    <table id="serviceList">
                         <thead>
                             <tr class="t-head">
                                 <th class="column1">BSID</th>
@@ -113,9 +113,9 @@
 
     <footer>
         <div>
-            2021 &copy; <a target="_blank" href="https://github.com/BadAimWeeb">BAW</a> + <a target="_blank"
-                href="https://www.facebook.com/VTD1709/">BinFat
-            </a>&nbsp; <a target="_blank" href="https://github.com/Project-Dec1mus">(TeamDec1mus)</a>
+            2021 &copy; <a target="_blank"
+            href="https://www.facebook.com/VTD1709/">BinFat (frontend)
+        </a> + <a target="_blank" href="https://github.com/BadAimWeeb">BadAimWeeb/KRSR (backend + logic)</a>&nbsp; @ <a target="_blank" href="https://github.com/Project-Dec1mus">TeamDec1mus</a>
             &nbsp;&nbsp;&nbsp;&nbsp;<span id="status" style="color: red;">Connection lost!</span>
         </div>
     </footer>
