--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CFC Metric - CMv2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -33,7 +33,7 @@
         <div class="selector">
             Services List
         </div>
-        <div class="selector">
+        <div class="selector" onclick='alert("Coming soon!")'>
             Contact
         </div>
     </header>
@@ -116,7 +116,7 @@
             2021 &copy; <a target="_blank"
             href="https://www.facebook.com/VTD1709/">BinFat (frontend)
         </a> + <a target="_blank" href="https://github.com/BadAimWeeb">BadAimWeeb/KRSR (backend + logic)</a>&nbsp; @ <a target="_blank" href="https://github.com/Project-Dec1mus">TeamDec1mus</a>
-            &nbsp;&nbsp;&nbsp;&nbsp;<span id="status" style="color: red;">Connection lost!</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;<span id="status" style="color: red; float: right;">Connection lost!</span>
         </div>
     </footer>
 </body>
