--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,14 @@
     <div style="width: 100%; height: 100%; position: fixed; z-index: 9999999; top: 0px; left: 0px; background-color: white;" id="loadingScreen">
         <img src="/assets/loading.svg" alt="LOADING..." style="width: 200px; height: 200px; position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -100px;">
     </div>
+    <div style="width: 100%; height: 100%; position: fixed; z-index: 9999998; top: 0px; left: 0px; background-color: white; display: none; background-color: rgba(0, 0, 0, 0.5); justify-content: center;" id="viewDetails">
+        <div id="windowDetails" style="width: fit-content; height: fit-content; margin: 0 auto; align-self: center;">
+            ID: <span id="detailsID"></span>
+            Raw Data: <br>
+            <textarea cols="80" rows="30" id="detailsRawData"></textarea><br>
+            <br><a href="javascript:void(document.querySelector('#viewDetails').style.display = 'none')">Close</a>
+        </div>
+    </div>
 
     <header>
         <div style="width: 56px; height: 56px;">
