--- a/assets/mainMenu.css
+++ b/assets/mainMenu.css
@@ -209,12 +209,13 @@ tr:last-child td:last-child {
     min-width: 100px;
     min-height: 100px;
     margin: 0 auto;
-    padding: 8px;
 
     border-top: 1px solid white;
     border-left: 1px solid white;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
+
+    justify-self: center;
 }
 
 .windowBar {
@@ -222,7 +223,7 @@ tr:last-child td:last-child {
     padding: 2px;
     border: 2px solid rgb(192, 192, 192);
     background: rgb(0, 0, 207);
-    height: 20px;
+    height: 26px;
 }
 
 .windowTitle {
@@ -231,6 +232,7 @@ tr:last-child td:last-child {
     padding-left: 4px;
     font-size: 14px;
     font-family: 'Courier New', Courier, monospace;
+    float: left;
 }
 
 .windowButton {
@@ -238,12 +240,14 @@ tr:last-child td:last-child {
 }
 
 .windowButton > button {
-    height: 18px;
-    width: 18px;
-    margin: 1px;
+    height: 23px;
+    width: 23px;
     background: rgb(192, 192, 192);
     font-size: 16px;
     border: 1.5px solid black;
+    padding: 0;
+    font-family: monospace;
+    line-height: 22px;
 }
 
 .windowContent {
