--- a/assets/mainMenu.css
+++ b/assets/mainMenu.css
@@ -240,14 +240,14 @@ tr:last-child td:last-child {
 }
 
 .windowButton > button {
-    height: 23px;
-    width: 23px;
+    height: 15px;
+    width: 15px;
     background: rgb(192, 192, 192);
-    font-size: 16px;
+    font-size: 12px;
     border: 1.5px solid black;
     padding: 0;
     font-family: monospace;
-    line-height: 22px;
+    line-height: 24px;
 }
 
 .windowContent {
@@ -259,4 +259,9 @@ tr:last-child td:last-child {
     margin: 1px;
     width: fit-content;
     height: fit-content;
+}
+
+#detailsRawData {
+    width: fit-content;
+    font-family: 'Courier New', Courier, monospace;
 }
