--- a/assets/mainMenu.css
+++ b/assets/mainMenu.css
@@ -237,6 +237,7 @@ tr:last-child td:last-child {
 
 .windowButton {
     float: right;
+    height: 18px;
 }
 
 .windowButton > button {
@@ -247,7 +248,7 @@ tr:last-child td:last-child {
     border: 1.5px solid black;
     padding: 0;
     font-family: monospace;
-    line-height: 24px;
+    line-height: 14px;
 }
 
 .windowContent {
