--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
                 <div class="windowCBox">
                     ID: <span id="detailsID"></span><br>
                     ExtraData JSON: <br>
-                    <textarea id="detailsRawData" rows="4"></textarea><br>
+                    <textarea id="detailsRawData" rows="4" readonly></textarea><br>
                 </div>
             </div>
         </div>
