--- a/assets/mainMenu.css
+++ b/assets/mainMenu.css
@@ -238,22 +238,17 @@ tr:last-child td:last-child {
 .windowButton {
     float: right;
     height: 18px;
-}
-
-.windowButton > button {
-    height: 15px;
-    width: 15px;
+    width: 18px;
+    font-family: monospace;
+    line-height: 15px;
+    font-size: 16px;
     background: rgb(192, 192, 192);
-    font-size: 12px;
     border: 1.5px solid black;
     padding: 0;
-    font-family: monospace;
-    line-height: 14px;
 }
 
 .windowContent {
     background: rgb(192, 192, 192);
-    margin: 1px;
     padding: 4px;
 }
 
@@ -264,7 +259,7 @@ tr:last-child td:last-child {
 }
 
 #detailsRawData {
-    width: fit-content;
+    width: 100%;
     font-family: 'Courier New', Courier, monospace;
 }
 
