--- a/views/index.html
+++ b/views/index.html
@@ -33,9 +33,8 @@
         <div id="windowDetails">
             <div class="windowBar">
                 <div class="windowTitle">ID <span id="wDTitleID"></span> - Details</div>
-                <div class="windowButton">
-                    <button
-                        onclick="javascript:void(document.querySelector('#viewDetails').style.display = 'none')">✖</button>
+                <div class="windowButton" onclick="javascript:void(document.querySelector('#viewDetails').style.display = 'none')"">
+                    ✖
                 </div>
             </div>
             <div class="windowContent">
