--- a/assets/mainMenu.css
+++ b/assets/mainMenu.css
@@ -197,7 +197,7 @@ tr:last-child td:last-child {
     background-color: white;
     display: none;
     background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
+    vertical-align: center;
     align-items: center;
 }
 
@@ -216,6 +216,8 @@ tr:last-child td:last-child {
     border-bottom: 1px solid black;
 
     justify-self: center;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 .windowBar {
@@ -245,6 +247,9 @@ tr:last-child td:last-child {
     background: rgb(192, 192, 192);
     border: 1.5px solid black;
     padding: 0;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: center;
 }
 
 .windowContent {
@@ -260,10 +265,13 @@ tr:last-child td:last-child {
 
 #detailsRawData {
     width: 100%;
+    height: 4em;
     font-family: 'Courier New', Courier, monospace;
 }
 
 #detailsDesc {
-    width: fit-content;
+    width: 100%;
+    min-width: 25ex;
+    height: 4em;
     font-family: 'Courier New', Courier, monospace;
 }
