--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
                 <div class="windowCBox">
                     ID: <span id="detailsID"></span><br>
                     Description: <br>
-                    <textarea id="detailsDesc" rows="4" cols="25" readonly></textarea><br>
+                    <textarea id="detailsDesc" rows="4" readonly></textarea><br>
                     <br>
                     ExtraData JSON: <br>
                     <textarea id="detailsRawData" rows="4" readonly></textarea><br>
