--- a/views/index.html
+++ b/views/index.html
@@ -82,7 +82,8 @@
                             <p>Statistics</p>
                         </div>
                         <div class="tcccontent">
-                            Not available
+                            Active services: <span id="statActiveCount">0/0</span><br>
+                            Avg. uptime: <span id="statAvgUptime">0%</span>
                         </div>
                     </div>
                 </div>
