--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFC Metric - CMv2</title>
+    <script src="/assets/l-scripts/jquery-3.5.1-min.js"></script>
+    <script src="/assets/l-scripts/jquery.canvasjs.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -17,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.min.js"
         integrity="sha512-ZqQWGugamKhlSUqM1d/HMtwNG+hITmd/ptoof91lt5ojFZ+2bKlkvlzkmnDIrnikDY+UDVZVupLf6MNbuhtFSw=="
         crossorigin="anonymous"></script>
-    <script src="/assets/serviceList.js" async></script>
+    <script src="/a-scripts/serviceList.js"></script>
 </head>
 
 <body style="overflow: hidden;">
@@ -68,10 +70,10 @@
                 <div class="col table-chart1">
                     <div class="table-chart-content">
                         <div class="tccheader">
-                            <p>Market Share</p>
+                            <p>Service's Backend type chart</p>
                         </div>
                         <div class="tcccontent">
-                            - insert chart here -
+                            <div id="SBCContainer" style="margin: 0px auto;"></div>
                         </div>
                     </div>
                 </div>
