canvasjs => chart.js (canvas.js suck)

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFC Metric - CMv2</title>
     <script src="/assets/l-scripts/jquery-3.5.1-min.js"></script>
-    <script src="/assets/l-scripts/jquery.canvasjs.min.js"></script>
+    <script src="https://www.jsdelivr.com/package/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -73,7 +73,7 @@
                             <p>Service's Backend type chart</p>
                         </div>
                         <div class="tcccontent">
-                            <div id="SBCContainer" style="margin: 0px auto;"></div>
+                            <canvas id="SBCContainer" style="margin: 0px auto;" height="1" width="1"></div>
                         </div>
                     </div>
                 </div>
