--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Loading screen, load before everything else -->
+<div style="width: 100%; height: 100%; position: fixed; z-index: 9999999; top: 0px; left: 0px; background-color: white;"
+    id="loadingScreen">
+    <img src="/assets/loading.svg" alt="LOADING..."
+        style="width: 200px; height: 200px; position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -100px;">
+</div>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFC Metric - CMv2</title>
     <script src="/assets/l-scripts/jquery-3.5.1-min.js"></script>
-    <script src="https://www.jsdelivr.com/package/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -23,57 +30,52 @@
 </head>
 
 <body style="overflow: hidden;">
-    <!-- Loading screen -->
-    <div style="width: 100%; height: 100%; position: fixed; z-index: 9999999; top: 0px; left: 0px; background-color: white;"
-        id="loadingScreen">
-        <img src="/assets/loading.svg" alt="LOADING..."
-            style="width: 200px; height: 200px; position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -100px;">
-    </div>
-
     <!-- Details - overlay -->
     <div id="viewDetails">
         <div id="windowDetails">
             <div class="windowBar">
                 <div class="windowTitle">ID <span id="wDTitleID"></span> - Details</div>
-                <div class="windowButton" onclick="javascript:void(document.querySelector('#viewDetails').style.display = 'none')"">
+                <div class="windowButton"
+                    onclick="javascript:void(document.querySelector('#viewDetails').style.display = 'none')"">
                     ✖
                 </div>
             </div>
-            <div class="windowContent">
-                <div class="windowCBox">
-                    ID: <span id="detailsID"></span><br>
-                    Description: <br>
-                    <textarea id="detailsDesc" rows="4" readonly></textarea><br>
-                    <br>
-                    ExtraData JSON: <br>
-                    <textarea id="detailsRawData" rows="4" readonly></textarea><br>
+            <div class=" windowContent">
+                    <div class="windowCBox">
+                        ID: <span id="detailsID"></span><br>
+                        Description: <br>
+                        <textarea id="detailsDesc" rows="4" readonly></textarea><br>
+                        <br>
+                        ExtraData JSON: <br>
+                        <textarea id="detailsRawData" rows="4" readonly></textarea><br>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <header>
-        <div style="width: 56px; height: 56px;">
-            <img style="width: 56px; height: 56px; padding: 8px;" src="/assets/logo.jpg" alt="Logo">
-        </div>
+        <header>
+            <div style="width: 56px; height: 56px;">
+                <img style="width: 56px; height: 56px; padding: 8px;" src="/assets/logo.jpg" alt="Logo">
+            </div>
 
-        <div class="selector">
-            Services List
-        </div>
-        <div class="selector" onclick='alert("Coming soon!")'>
-            Contact
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="col table-chart1">
-                    <div class="table-chart-content">
-                        <div class="tccheader">
-                            <p>Service's Backend type chart</p>
-                        </div>
-                        <div class="tcccontent">
-                            <canvas id="SBCContainer" style="margin: 0px auto;" height="1" width="1"></div>
+            <div class="selector">
+                Services List
+            </div>
+            <div class="selector" onclick='alert("Coming soon!")'>
+                Contact
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col table-chart1">
+                        <div class="table-chart-content">
+                            <div class="tccheader">
+                                <p>Service's Backend type chart</p>
+                            </div>
+                            <div class="tcccontent">
+                                <canvas id="SBCContainer" style="margin: 0px auto;" height="1" width="1">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,8 +137,8 @@
                     </table>
                 </div>
             </div>
-        </div>
-        </div>
+    </div>
+    </div>
     </main>
 
     <footer>
