--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Loading screen, load before everything else -->
-<div style="width: 100%; height: 100%; position: fixed; z-index: 9999999; top: 0px; left: 0px; background-color: white;"
-    id="loadingScreen">
-    <img src="/assets/loading.svg" alt="LOADING..."
-        style="width: 200px; height: 200px; position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -100px;">
-</div>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CFC Metric - CMv2</title>
-    <script src="/assets/l-scripts/jquery-3.5.1-min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+</head>
+
+<body style="overflow: hidden;">
+    <!-- Loading screen, load before everything else -->
+    <div style="width: 100%; height: 100%; position: fixed; z-index: 9999999; top: 0px; left: 0px; background-color: white;"
+        id="loadingScreen">
+        <img src="/assets/loading.svg" alt="LOADING..."
+            style="width: 200px; height: 200px; position: absolute; top: 50%; left: 50%; margin-top: -100px; margin-left: -100px;">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
+        integrity="sha256-t9UJPrESBeG2ojKTIcFLPGF7nHi2vEc7f5A2KpH/UBU=" crossorigin="anonymous">
+        </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -27,9 +33,7 @@
         integrity="sha512-ZqQWGugamKhlSUqM1d/HMtwNG+hITmd/ptoof91lt5ojFZ+2bKlkvlzkmnDIrnikDY+UDVZVupLf6MNbuhtFSw=="
         crossorigin="anonymous"></script>
     <script src="/a-scripts/serviceList.js"></script>
-</head>
 
-<body style="overflow: hidden;">
     <!-- Details - overlay -->
     <div id="viewDetails">
         <div id="windowDetails">
@@ -144,7 +148,8 @@
     <footer>
         <div>
             2021 &copy; <a target="_blank" href="https://www.facebook.com/VTD1709/">BinFat (frontend)
-            </a> + <a target="_blank" href="https://github.com/BadAimWeeb">BadAimWeeb/KRSR (backend + logic)</a>&nbsp; @
+            </a> + <a target="_blank" href="https://github.com/BadAimWeeb">BadAimWeeb/KRSR (backend +
+                logic)</a>&nbsp; @
             <a target="_blank" href="https://github.com/Project-Dec1mus">TeamDec1mus</a>
             &nbsp;&nbsp;&nbsp;&nbsp;<span id="status" style="color: red; float: right;">Connection lost!</span>
         </div>
