--- a/views/index.html
+++ b/views/index.html
@@ -77,7 +77,7 @@
                             <div class="tccheader">
                                 <p>Service's Backend type chart</p>
                             </div>
-                            <div class="tcccontent">
+                            <div class="tcccontent" style="position: relative;">
                                 <canvas id="SBCContainer" style="margin: 0px auto;" height="1" width="1">
                             </div>
                         </div>
