--- a/views/index.html
+++ b/views/index.html
@@ -77,8 +77,10 @@
                             <div class="tccheader">
                                 <p>Service's Backend type chart</p>
                             </div>
-                            <div class="tcccontent" style="position: relative;">
-                                <canvas id="SBCContainer" style="margin: 0px auto;" height="1" width="1">
+                            <div class="tcccontent">
+                                <div class="SBCContainer" style="position: relative; width: 100%">
+                                    <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
+                                </div>
                             </div>
                         </div>
                     </div>
