--- a/views/index.html
+++ b/views/index.html
@@ -78,8 +78,10 @@
                                 <p>Service's Backend type chart</p>
                             </div>
                             <div class="tcccontent">
-                                <div class="SBCContainer" style="position: relative;">
-                                    <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
+                                <div class="colResizeContainer">
+                                    <div class="SBCContainer" style="position: relative;">
+                                        <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
+                                    </div>
                                 </div>
                             </div>
                         </div>
