--- a/views/index.html
+++ b/views/index.html
@@ -78,8 +78,8 @@
                                 <p>Service's Backend type chart</p>
                             </div>
                             <div class="tcccontent">
-                                <div class="colResizeContainer">
-                                    <div class="SBCContainer" style="position: relative;">
+                                <div class="col1ResizeContainer">
+                                    <div class="SBCContainer" style="position: relative; width: 100%">
                                         <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
                                     </div>
                                 </div>
