--- a/assets/mainMenu.css
+++ b/assets/mainMenu.css
@@ -27,9 +27,9 @@
 }
 
 body {
-    background: url(/assets/background.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: url(/assets/background.svg);
+    background-repeat: repeat;
+    background-size: auto;
     background-attachment: fixed;
 }
 
