remove position: relative

--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
                             </div>
                             <div class="tcccontent">
                                 <div class="col1ResizeContainer">
-                                    <div class="SBCContainer" style="position: relative; width: 100%">
+                                    <div class="SBCContainer" style="width: 100%">
                                         <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
                                     </div>
                                 </div>
