--- a/views/index.html
+++ b/views/index.html
@@ -78,10 +78,8 @@
                                 <p>Service's Backend type chart</p>
                             </div>
                             <div class="tcccontent">
-                                <div class="col1ResizeContainer">
-                                    <div class="SBCContainer" style="width: 100%">
-                                        <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
-                                    </div>
+                                <div class="SBCContainer">
+                                    <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
                                 </div>
                             </div>
                         </div>
