init width is not correct

--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
                             </div>
                             <div class="tcccontent">
                                 <div class="SBCContainer">
-                                    <canvas id="SBCCanvas" style="margin: 0px auto;" height="1" width="1"></canvas>
+                                    <canvas id="SBCCanvas" style="margin: 0px auto; display: block; height: 1px; width: 1px;" height="1" width="1"></canvas>
                                 </div>
                             </div>
                         </div>
