--- a/views/index.html
+++ b/views/index.html
@@ -78,8 +78,8 @@
                                 <p>Service's Backend type chart</p>
                             </div>
                             <div class="tcccontent">
-                                <div class="SBCContainer">
-                                    <canvas id="SBCCanvas" style="margin: 0px auto; display: block; height: 1px; width: 1px;" height="1" width="1"></canvas>
+                                <div class="SBCContainer" style="height: 1px; width: 1px;">
+                                    <canvas id="SBCCanvas" style="display: block; height: 1px; width: 1px;" height="1" width="1"></canvas>
                                 </div>
                             </div>
                         </div>
