--- a/views/index.html
+++ b/views/index.html
@@ -79,21 +79,22 @@
                             </div>
                             <div class="tcccontent">
                                 <div class="SBCContainer" style="height: 1px; width: 1px;">
-                                    <canvas id="SBCCanvas" style="display: block; height: 1px; width: 1px;" height="1" width="1"></canvas>
+                                    <canvas id="SBCCanvas" style="display: block; height: 1px; width: 1px;" height="1"
+                                        width="1"></canvas>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="w-100 d-block d-md-none"><br></div>
-                <div class="col table-chart2">
-                    <div class="table-chart-content">
-                        <div class="tccheader">
-                            <p>Statistics</p>
-                        </div>
-                        <div class="tcccontent">
-                            Active services: <span id="statActiveCount">0/0</span><br>
-                            Avg. uptime: <span id="statAvgUptime">0%</span>
+                    <div class="w-100 d-block d-md-none"><br></div>
+                    <div class="col table-chart2">
+                        <div class="table-chart-content">
+                            <div class="tccheader">
+                                <p>Statistics</p>
+                            </div>
+                            <div class="tcccontent">
+                                Active services: <span id="statActiveCount">0/0</span><br>
+                                Avg. uptime: <span id="statAvgUptime">0%</span>
+                            </div>
                         </div>
                     </div>
                 </div>
