--- a/views/index.html
+++ b/views/index.html
@@ -56,45 +56,46 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <header>
-            <div style="width: 56px; height: 56px;">
-                <img style="width: 56px; height: 56px; padding: 8px;" src="/assets/logo.jpg" alt="Logo">
-            </div>
+    <header>
+        <div style="width: 56px; height: 56px;">
+            <img style="width: 56px; height: 56px; padding: 8px;" src="/assets/logo.jpg" alt="Logo">
+        </div>
 
-            <div class="selector">
-                Services List
-            </div>
-            <div class="selector" onclick='alert("Coming soon!")'>
-                Contact
-            </div>
-        </header>
-        <main>
-            <div class="container">
-                <div class="row">
-                    <div class="col table-chart1">
-                        <div class="table-chart-content">
-                            <div class="tccheader">
-                                <p>Service's Backend type chart</p>
-                            </div>
-                            <div class="tcccontent">
-                                <div class="SBCContainer" style="height: 1px; width: 1px;">
-                                    <canvas id="SBCCanvas" style="display: block; height: 1px; width: 1px;" height="1"
-                                        width="1"></canvas>
-                                </div>
+        <div class="selector">
+            Services List
+        </div>
+        <div class="selector" onclick='alert("Coming soon!")'>
+            Contact
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col table-chart1">
+                    <div class="table-chart-content">
+                        <div class="tccheader">
+                            <p>Service's Backend type chart</p>
+                        </div>
+                        <div class="tcccontent">
+                            <div class="SBCContainer" style="height: 1px; width: 100%;">
+                                <canvas id="SBCCanvas" style="display: block; height: 1px; width: 1px;" height="1"
+                                    width="1"></canvas>
                             </div>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-none"><br></div>
-                    <div class="col table-chart2">
-                        <div class="table-chart-content">
-                            <div class="tccheader">
-                                <p>Statistics</p>
-                            </div>
-                            <div class="tcccontent">
-                                Active services: <span id="statActiveCount">0/0</span><br>
-                                Avg. uptime: <span id="statAvgUptime">0%</span>
-                            </div>
+                </div>
+                <div class="w-100 d-block d-md-none"><br></div>
+                <div class="col table-chart2">
+                    <div class="table-chart-content">
+                        <div class="tccheader">
+                            <p>Statistics</p>
+                        </div>
+                        <div class="tcccontent">
+                            Active services: <span id="statActiveCount">0/0</span><br>
+                            Avg. uptime: <span id="statAvgUptime">0%</span>
                         </div>
                     </div>
                 </div>
@@ -144,8 +145,7 @@
                     </table>
                 </div>
             </div>
-    </div>
-    </div>
+        </div>
     </main>
 
     <footer>
