--- a/views/index.html
+++ b/views/index.html
@@ -80,7 +80,7 @@
                             <p>Service's Backend type chart</p>
                         </div>
                         <div class="tcccontent">
-                            <div class="SBCContainer" style="max-height: 70vh; width: 100%;">
+                            <div class="SBCContainer" style="max-height: 60vh; width: 100%; max-width: 60vh; margin: 0 auto;">
                                 <canvas id="SBCCanvas" style="display: block; height: 1px; width: 1px;" height="1"
                                     width="1"></canvas>
                             </div>
