--- a/views/index.html
+++ b/views/index.html
@@ -77,7 +77,7 @@
                 <div class="col table-chart1">
                     <div class="table-chart-content">
                         <div class="tccheader">
-                            <p>Service's Backend type chart</p>
+                            <p>Service Engine Share</p>
                         </div>
                         <div class="tcccontent">
                             <div class="SBCContainer" style="max-height: 60vh; width: 100%; max-width: 60vh; margin: 0 auto;">
@@ -106,42 +106,14 @@
                         <thead>
                             <tr class="t-head">
                                 <th class="column1">BSID</th>
-                                <th class="column2">Type</th>
+                                <th class="column2">Engine</th>
                                 <th class="column3">Version</th>
                                 <th class="column4">Uptime</th>
                                 <th class="column5">First seen</th>
                                 <th class="column6">Additional info</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td class="column1">0000000000000000</td>
-                                <td class="column2">C3CBot</td>
-                                <td class="column3">0.5.9</td>
-                                <td class="column4">95%</td>
-                                <td class="column5">2020-04-01 07:00:00 GMT</td>
-                                <td class="column6"><a
-                                        href="javascript:void(viewAdditionalInfo('0000000000000000')">Info</a></td>
-                            </tr>
-                            <tr>
-                                <td class="column1">fca0e36b8ac715d2</td>
-                                <td class="column2">Mirai</td>
-                                <td class="column3">4.7.1</td>
-                                <td class="column4">92%</td>
-                                <td class="column5">2021-01-14 12:30:26 GMT</td>
-                                <td class="column6"><a
-                                        href="javascript:void(viewAdditionalInfo('fca0e36b8ac715d2')">Info</a></td>
-                            </tr>
-                            <tr>
-                                <td class="column1">bd3c6154fe85a64c</td>
-                                <td class="column2">KB2ABot</td>
-                                <td class="column3">1.0.0</td>
-                                <td class="column4">87%</td>
-                                <td class="column5">2021-01-15 10:19:42 GMT</td>
-                                <td class="column6"><a
-                                        href="javascript:void(viewAdditionalInfo('bd3c6154fe85a64c')">Info</a></td>
-                            </tr>
-                        </tbody>
+                        <tbody></tbody>
                     </table>
                 </div>
             </div>
